--- a/js/package.json
+++ b/js/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@hamzone/share",
+    "name": "@hamcq/share",
     "private": true,
     "version": "0.0.0",
     "devDependencies": {
